--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
-    <string name="app_name">Chronos_app</string>
+    <string name="app_name">Chronos</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_history">History</string>
 </resources>
