--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Chronos</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_history">History</string>
+    <string name="title_activity_edit_history">EditHistory</string>
 </resources>
